# BioSignal_AI3

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
audits/: 2026-05-08_audit.md
configs/: config.yaml  default.yaml  exercises.yaml  methods_reference.yaml  nn.yaml  phase_quality_sets.csv  splits.csv  splits_clean.csv  splits_clean_loso.csv  splits_loso.csv  splits_per_fold.csv  src3.yaml
results/: jasa_quadrant_table.tex  sweep_features_top15.json  sweep_raw_fatigue_per_set.csv  sweep_raw_per_fold.csv  sweep_raw_results.csv  thesis_results_tables.tex  v15_v19_multitask_comparison.csv  v16tight_results.csv  v17_ablation_results.csv  v17_all_folds.csv  v17_full_comparison.csv  v17_full_features.csv  v17_modality_importance.csv  v17_modality_importance_summary.csv  v20_all_results.csv
scripts/: README.md  _common.py  _compare_uncw.py  _gen_thesis_tables.py  ablate_modalities.py  acc_filter_explorer.py  add_emg_rms.py  add_soft_overlap_all_paths.py  add_soft_overlap_reps.py  aggregate_v17_to_csv.py  analyze_features.py  bench_workers.py  browse_raw_signals.py  build_best_comparison.py  build_dataset_aligned.py  build_dataset_clean.py  build_modality_importance_csv.py  build_thesis_master_csv.py  build_v17_master_csv.py  chain_v7_to_v8.py  check_special_recordings.py  compare_all.py  compare_architectures.py  compare_ecg_filtering.py  compare_v13soft_v12.py  correlate_fatigue_predictions.py  dump_v13_csv.py  eval_fatigue_per_set.py  explore_acc_fatigue.py  fix_dataset_aligned.py  generate_all_fatigue_dashboards.py  generate_plots.py  (+110 more)
(+3297 files in other folders)
